.archive/librechat/rag-api/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: librechat-rag-api
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: librechat-rag-api
  ingress:
    # Librechat
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: librechat
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
